--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bootstrap-icons": "^1.5.0",
     "connect-flash": "^0.1.1",
     "ejs": "^3.1.6",
     "ejs-mate": "^3.0.0",
@@ -19,6 +20,9 @@
     "method-override": "^3.0.0",
     "mongoose": "^5.12.13",
     "nodemon": "^2.0.8",
+    "passport": "^0.4.1",
+    "passport-local": "^1.0.0",
+    "passport-local-mongoose": "^6.1.0",
     "session": "^0.1.0"
   }
 }
